# m

./: Cargo.toml  LICENSE
assets/shaders/simple_triangle/: simple.frag.glsl  simple.vert.glsl
renderer/: Cargo.toml
renderer/src/: lib.rs  shader.rs
src/: NOTES  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
