[package]
name = "evemap"
version = "0.1.0"
authors = ["David Soria Parra <dsp@experimentalworks.net>"]
edition = "2018"

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]
gl = ["gfx-backend-gl"]

[dependencies]
env_logger = "*"
gfx = "*"
gfx-hal = "*"
log = "*"
winit = "*"
glsl-to-spirv = "*"
image = "*"
renderer = { path = "renderer/" }
utils = { path = "utils/" }

[dependencies.gfx-backend-vulkan]
version = "*"
optional = true

[dependencies.gfx-backend-gl]
version = "*"
optional = true

[workspace]
members = ["renderer", "utils"]
