[package]
name = "renderer"
version = "0.1.0"
authors = ["dsp"]
edition = "2018"

[dependencies]
env_logger = "*"
gfx = "*"
gfx-hal = "*"
log = "*"
winit = "*"
glsl-to-spirv = "*"
image = "*"
utils = { path = "../utils" }

[dependencies.gfx-backend-vulkan]
version = "*"
optional = true

[dependencies.gfx-backend-gl]
version = "*"
optional = true
